Validation and confirmation messages.

--- a/UI/WordTest.UI.csproj
+++ b/UI/WordTest.UI.csproj
@@ -120,6 +120,7 @@
     <Compile Include="Models\TestSetupPageModel.cs" />
     <Compile Include="Properties\Annotations.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\Validator.cs" />
   </ItemGroup>
   <ItemGroup>
     <AppxManifest Include="Package.appxmanifest">
