--- a/UI/WordTest.UI.csproj
+++ b/UI/WordTest.UI.csproj
@@ -101,7 +101,7 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Models\BoolToVisibilityConverter.cs" />
+    <Compile Include="Services\BoolToVisibilityConverter.cs" />
     <Compile Include="Models\TestItemWrapper.cs" />
     <Compile Include="Models\TestSetupModel.cs" />
     <Compile Include="Services\CommandHandler.cs" />
